--- a/composer.json
+++ b/composer.json
@@ -27,16 +27,15 @@
   },
   "require": {
     "php": ">=7.0",
-    "illuminate/database": "~5.4",
-    "illuminate/support": "~5.4",
-    "nesbot/carbon": "~1.21"
+    "illuminate/database": "^5.0||^6.0||^7.0",
+    "illuminate/support": "^5.0||^6.0||^7.0"
   },
   "require-dev": {
-    "fzaninotto/faker": "^1.4",
-    "mockery/mockery": "^0.9",
-    "orchestra/database": "^3.4",
-    "orchestra/testbench": "^3.4",
-    "phpunit/phpunit": "~6.1|~7.0",
+    "fzaninotto/faker": "*",
+    "mockery/mockery": "*",
+    "orchestra/database": "*",
+    "orchestra/testbench": "*",
+    "phpunit/phpunit": ">=6.0,<9.0",
     "squizlabs/php_codesniffer": "^3.0"
   },
   "scripts": {
