--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
   },
   "require": {
     "php": ">=7.0",
-    "illuminate/database": "^5.0||^6.0||^7.0||^8.0",
-    "illuminate/support": "^5.0||^6.0||^7.0||^8.0"
+    "illuminate/database": "*",
+    "illuminate/support": "*"
   },
   "require-dev": {
     "fzaninotto/faker": "*",
