--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "oanhnn/laravel-pricing-plans",
+  "name": "dominservice/laravel-pricing-plans",
   "type": "library",
   "description": "A package provide pricing plans for Laravel.",
   "keywords": [
@@ -9,39 +9,35 @@
     "pricing"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/oanhnn/laravel-pricing-plans",
+  "homepage": "https://github.com/dominservice/laravel-pricing-plans",
   "support": {
-    "issues": "https://github.com/oanhnn/laravel-pricing-plans/issues",
-    "source": "https://github.com/oanhnn/laravel-pricing-plans"
+    "issues": "https://github.com/dominservice/laravel-pricing-plans/issues",
+    "source": "https://github.com/dominservice/laravel-pricing-plans"
   },
   "authors": [
     {
       "name": "Oanh Nguyen",
       "email": "oanhnn.bk@gmail.com"
+    },
+    {
+      "name": "Eduardo Gusmão",
+      "email": " eduguscontra3@hotmail.com"
+    },
+    {
+      "name": "dominservice",
+      "email": "biuro@dso.biz.pl",
+      "role": "Developer"
     }
   ],
   "autoload": {
     "psr-4": {
-      "Laravel\\PricingPlans\\": "src/"
+      "Dominservice\\PricingPlans\\": "src/"
     }
   },
   "require": {
-    "php": ">=7.0",
-    "illuminate/database": "*",
-    "illuminate/support": "*"
-  },
-  "require-dev": {
-    "fzaninotto/faker": "*",
-    "mockery/mockery": "*",
-    "orchestra/database": "*",
-    "orchestra/testbench": "*",
-    "phpunit/phpunit": ">=6.0,<9.0",
-    "squizlabs/php_codesniffer": "^3.0"
-  },
-  "scripts": {
-    "phpunit": "php vendor/phpunit/phpunit/phpunit --coverage-html build/coverage",
-    "phpcs": "php vendor/squizlabs/php_codesniffer/bin/phpcs",
-    "phpcbf": "php vendor/squizlabs/php_codesniffer/bin/phpcbf"
+    "php": ">=8.1.0",
+    "illuminate/database": "^10",
+    "illuminate/support": "^10"
   },
   "config": {
     "preferred-install": "dist",
@@ -51,7 +47,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Laravel\\PricingPlans\\PricingPlansServiceProvider"
+        "Dominservice\\PricingPlans\\PricingPlansServiceProvider"
       ],
       "aliases": {
       }
